@@ -2,25 +2,18 @@ package com.ainovel.community.service;
 
 import com.ainovel.common.api.PageResponse;
 import com.ainovel.common.api.StandardErrorCode;
-import com.ainovel.community.domain.Comment;
 import com.ainovel.community.domain.CommentStatus;
 import com.ainovel.community.domain.TargetType;
 import com.ainovel.community.dto.CreateCommentRequest;
+import com.ainovel.community.entity.CommentEntity;
 import com.ainovel.community.mapper.CommentMapper;
 import com.ainovel.community.vo.CommentVO;
 import com.ainovel.infrastructure.exception.BusinessException;
 import com.ainovel.security.auth.context.CurrentUserHolder;
 import java.time.Duration;
 import java.time.LocalDateTime;
-import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ConcurrentMap;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
-import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -28,12 +21,10 @@ public class CommentServiceImpl implements CommentService {
 
     private static final Duration DUPLICATE_WINDOW = Duration.ofSeconds(30);
 
-    private final ObjectProvider<CommentMapper> commentMapperProvider;
-    private final AtomicLong commentIdGenerator = new AtomicLong(1);
-    private final ConcurrentMap<Long, Comment> localComments = new ConcurrentHashMap<>();
+    private final CommentMapper commentMapper;
 
-    public CommentServiceImpl(ObjectProvider<CommentMapper> commentMapperProvider) {
-        this.commentMapperProvider = commentMapperProvider;
+    public CommentServiceImpl(CommentMapper commentMapper) {
+        this.commentMapper = commentMapper;
     }
 
     @Override
@@ -47,81 +38,45 @@ public class CommentServiceImpl implements CommentService {
             throw new BusinessException(StandardErrorCode.IDEMPOTENT_CONFLICT, "duplicate comment submission");
         }
 
-        Comment comment = new Comment(
-                commentIdGenerator.getAndIncrement(),
-                request.targetType(),
-                request.targetId(),
-                userId,
-                request.parentId(),
-                request.replyToUserId(),
-                normalizedContent,
-                CommentStatus.VISIBLE,
-                now,
-                0L);
-
-        CommentMapper mapper = commentMapperProvider.getIfAvailable();
-        if (mapper != null) {
-            mapper.insert(comment);
-        }
-        localComments.put(comment.id(), comment);
+        CommentEntity comment = new CommentEntity();
+        comment.setTargetType(request.targetType());
+        comment.setTargetId(request.targetId());
+        comment.setUserId(userId);
+        comment.setParentId(request.parentId());
+        comment.setReplyToUserId(request.replyToUserId());
+        comment.setContent(normalizedContent);
+        comment.setStatus(CommentStatus.VISIBLE);
+        comment.setCreatedAt(now);
+        comment.setVersion(0L);
+        commentMapper.insert(comment);
         return toVO(comment);
     }
 
     @Override
     public void deleteComment(Long commentId) {
         Long userId = currentUserId();
-        Comment current = localComments.get(commentId);
-
-        CommentMapper mapper = commentMapperProvider.getIfAvailable();
-        if (current == null && mapper != null) {
-            current = mapper.findById(commentId).orElse(null);
-        }
-        if (current == null || current.status() == CommentStatus.DELETED) {
+        CommentEntity current = commentMapper.findById(commentId).orElse(null);
+        if (current == null || current.getStatus() == CommentStatus.DELETED) {
             return;
         }
-        if (!Objects.equals(current.userId(), userId)) {
+        if (!Objects.equals(current.getUserId(), userId)) {
             throw new BusinessException(StandardErrorCode.FORBIDDEN);
         }
 
-        if (mapper != null) {
-            int updated = mapper.softDelete(commentId, current.version());
-            if (updated == 0) {
-                throw new BusinessException(StandardErrorCode.BUSINESS_STATE_INVALID, "comment changed concurrently");
-            }
+        int updated = commentMapper.softDelete(commentId, current.getVersion());
+        if (updated == 0) {
+            throw new BusinessException(StandardErrorCode.BUSINESS_STATE_INVALID, "comment changed concurrently");
         }
-
-        Comment deleted = new Comment(
-                current.id(),
-                current.targetType(),
-                current.targetId(),
-                current.userId(),
-                current.parentId(),
-                current.replyToUserId(),
-                current.content(),
-                CommentStatus.DELETED,
-                current.createdAt(),
-                current.version() == null ? 1L : current.version() + 1);
-        localComments.put(commentId, deleted);
     }
 
     @Override
     public PageResponse<CommentVO> queryComments(TargetType targetType, Long targetId, int page, int size, String sort) {
-        List<CommentVO> records = localComments.values().stream()
-                .filter(comment -> comment.targetType() == targetType)
-                .filter(comment -> Objects.equals(comment.targetId(), targetId))
-                .filter(comment -> comment.status() == CommentStatus.VISIBLE)
-                .sorted(Comparator.comparing(Comment::createdAt).reversed())
-                .skip((long) (page - 1) * size)
-                .limit(size)
+        int offset = (page - 1) * size;
+        List<CommentVO> records = queryBySort(sort, targetType, targetId, offset, size).stream()
                 .map(this::toVO)
-                .collect(Collectors.toList());
+                .toList();
 
-        long total = localComments.values().stream()
-                .filter(comment -> comment.targetType() == targetType)
-                .filter(comment -> Objects.equals(comment.targetId(), targetId))
-                .filter(comment -> comment.status() == CommentStatus.VISIBLE)
-                .count();
-
+        long total = commentMapper.countVisibleByTarget(targetType, targetId);
         return PageResponse.of(records, total, page, size);
     }
 
@@ -130,17 +85,18 @@ public class CommentServiceImpl implements CommentService {
                                           Long targetId,
                                           String normalizedContent,
                                           LocalDateTime threshold) {
-        CommentMapper mapper = commentMapperProvider.getIfAvailable();
-        if (mapper != null && mapper.existsRecentDuplicate(userId, targetType, targetId, normalizedContent, threshold)) {
-            return true;
+        return commentMapper.existsRecentDuplicate(userId, targetType, targetId, normalizedContent, threshold);
+    }
+
+    private List<CommentEntity> queryBySort(String sort,
+                                            TargetType targetType,
+                                            Long targetId,
+                                            int offset,
+                                            int size) {
+        if ("old".equalsIgnoreCase(sort)) {
+            return commentMapper.queryVisibleByTargetOrderOld(targetType, targetId, offset, size);
         }
-        return localComments.values().stream()
-                .filter(comment -> Objects.equals(comment.userId(), userId))
-                .filter(comment -> comment.targetType() == targetType)
-                .filter(comment -> Objects.equals(comment.targetId(), targetId))
-                .filter(comment -> comment.status() != CommentStatus.DELETED)
-                .filter(comment -> Objects.equals(comment.content(), normalizedContent))
-                .anyMatch(comment -> !comment.createdAt().isBefore(threshold));
+        return commentMapper.queryVisibleByTargetOrderNew(targetType, targetId, offset, size);
     }
 
     private Long currentUserId() {
@@ -153,13 +109,13 @@ public class CommentServiceImpl implements CommentService {
         return content == null ? "" : content.trim().replaceAll("\\s+", " ");
     }
 
-    private CommentVO toVO(Comment comment) {
+    private CommentVO toVO(CommentEntity comment) {
         return new CommentVO(
-                comment.id(),
-                comment.userId(),
-                comment.content(),
-                comment.status().name(),
-                comment.createdAt(),
+                comment.getId(),
+                comment.getUserId(),
+                comment.getContent(),
+                comment.getStatus().name(),
+                comment.getCreatedAt(),
                 List.of());
     }
 }
